# ferrohsm

./: .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE_AGENTS.md  CHANGELOG.md  COMPREHENSIVE_PLAN.md  CONSOLIDATED_DEVELOPMENT_PLAN.md  Cargo.toml  DEPENDENCIES_INSTALLED.md  Dockerfile  ERD.md  FEATURES_SUMMARY.md  FINAL_ENHANCEMENT_REPORT.md  FIXES_SUMMARY.md  GITHUB_SECRETS.md  INSTALLATION_SUMMARY.md  PLAN.md  PRD.md  PROJECT.md  README.md  ROADMAP.md  SECURITY_STABILITY_EVALUATION.md  TASKS.md  WORKING_COMMANDS.md  debug_encryption.sh  demo_commands.sh  poc_demo.sh  poc_demo_fixed.sh
.github/workflows/: secret-scan.yml
.qoder/: settings.json
certs/: server-key.pem  server.pem
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/web_ui_dashboard_20260104/: metadata.json  spec.md
conductor/code_styleguides/: rust.md
conductor/tracks/web_ui_dashboard_20260104/: plan.md
crates/hsm-cli/: Cargo.toml
crates/hsm-cli/src/: main.rs
crates/hsm-core/: Cargo.toml
crates/hsm-core/benches/: attribute_lookup.rs  crypto_operations.rs
crates/hsm-core/examples/: pqc_test.rs
crates/hsm-core/src/: approvals.rs  attributes.rs  audit.rs  checkpoint.rs  crypto.rs  error.rs  fs_utils.rs  key_rotation.rs  lib.rs  models.rs  pkcs11.rs  policy.rs  pqc.rs  pqc_policy.rs  pqc_provider.rs  rbac.rs  retention.rs  session.rs  storage.rs
crates/hsm-core/src/tests/: mod.rs  pqc_test_vectors.rs  pqc_tests.rs
crates/hsm-pkcs11/: Cargo.toml  README.md
crates/hsm-pkcs11/src/: attribute.rs  lib.rs  mechanism.rs  operation.rs
crates/hsm-server/: Cargo.toml
crates/hsm-server/src/: auth.rs  main.rs  pqc.rs  retention.rs  tests.rs  tls.rs
crates/hsm-tui/: AGENTS.md  Cargo.toml  README.md  SUMMARY.md
crates/hsm-tui/src/: api.rs  config.rs  error.rs  event.rs  main.rs
crates/hsm-tui/src/ui/: components.rs  input.rs  layout.rs  mod.rs  style.rs  widgets.rs
crates/hsm-tui/tests/: cli.rs  e2e.rs
docs/: architecture.md  crypto_module_fixes.md  key_retention_policy.md
docs/adr/: 0001-pkcs11-shim-architecture.md
docs/homebrew/: README.md  SUMMARY.md  installation.md
docs/pkcs11/: api.md  attribute-model.md  phase0-discovery.md  session-manager.md  user_guide.md
docs/release_notes/: v0.3.0.md
docs/tui/: ENHANCEMENT_PLAN.md  IMPLEMENTATION_TASKS.md  SUMMARY.md
examples/go-sdk/: main.go
examples/python-sdk/: client.py
hsm-pkcs11/: Cargo.toml
hsm-pkcs11/src/: functions.rs  hardware.rs  lib.rs  object.rs  session.rs  slot.rs  types.rs
hsm-pkcs11/tests/: conformance.rs  integration.rs  object.rs  session.rs  soft_hsm.rs
scripts/: basic_test.sh  build_linux_package.sh  demo_commands.sh  e2e_test.sh  package_homebrew.sh  package_linux.sh  test_connection.sh  test_server.sh
tests/: durable_backends.rs  key_lifecycle.rs
web/static/: dashboard.js  styles.css
web/templates/: dashboard.html  layout.html
