[workspace]
members = [
    "crates/hsm-core",
    "crates/hsm-server",
    "crates/hsm-cli",
    "crates/hsm-pkcs11",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.1"
authors = ["Nuzli Latief <nuzlilatief@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
axum-extra = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
ring = "0.17"
chacha20poly1305 = "0.10"
argon2 = "0.5"
jsonwebtoken = "9"
async-trait = "0.1"
parking_lot = "0.12"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = { version = "0.23.4", features = ["ring"] }
rustls-pemfile = "2.1"
clap = { version = "4.5", features = ["derive", "env"] }
tera = "1.19"
walkdir = "2"
sha2 = "0.10"
hmac = "0.12"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
fs2 = "0.4"
mlua = { version = "0.9", features = ["luau", "vendored"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
p256 = { version = "0.13", features = ["pem", "ecdsa"] }
p384 = { version = "0.13", features = ["pem", "ecdsa"] }
aes-gcm = "0.10"
hex = "0.4"
base64 = "0.22"
criterion = "0.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
rustls-acme = { version = "0.14.1", features = ["axum", "tokio", "ring"] }
x509-parser = "0.16"
yasna = { version = "0.5", features = ["num-bigint"] }
sha1 = "0.10"
num-bigint = "0.4"
