[package]
name = "hsm-cli"
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
hsm-core = { path = "../hsm-core" }
comfy-table = "7"
base64 = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
jsonwebtoken = { workspace = true }
time = { workspace = true }
