[package]
name = "hsm-core"
version = "0.3.0"
edition = "2024"
license = "MIT"

[features]
default = []
pqc = ["oqs"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
ring = { workspace = true }
uuid = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
time = { workspace = true }

p256 = { workspace = true }
p384 = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
fs2 = { workspace = true }
rusqlite = { workspace = true }
aws-lc-rs = { workspace = true }
# Post-quantum cryptography (optional to avoid cmake requirement)
oqs = { version = "0.8.0", optional = true }
ml-dsa = "0.0.4"
sec1 = "0.7.3"
pkcs8 = "0.10.2"

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "attribute_lookup"
harness = false

[[example]]
name = "pqc_test"
harness = false
required-features = ["pqc"]
