[package]
name = "hsm-pkcs11"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "hsm_pkcs11"
crate-type = ["cdylib", "rlib"]

[dependencies]
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cryptoki = { version = "0.6", default-features = false }
cryptoki-sys = "0.1.8"
once_cell = "1.19"
hsm-core = { path = "../hsm-core" }

[dev-dependencies]
anyhow = { workspace = true }
