[package]
name = "hsm-pkcs11"
version = "0.3.0"
edition = "2024"
license = "MIT"

[features]
pqc = ["hsm-core/pqc"]

[lib]
name = "hsm_pkcs11"
crate-type = ["cdylib", "rlib"]

[dependencies]
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cryptoki = { version = "0.10.0", default-features = false }
cryptoki-sys = "0.4.0"
once_cell = "1.19"
hsm-core = { path = "../hsm-core" }
uuid = { workspace = true }
rand = { workspace = true }
time = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
