[package]
name = "hsm-server"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hsm-core = { path = "../hsm-core" }
clap = { workspace = true }
rustls = { workspace = true }
rustls-acme = { workspace = true }
rustls-pemfile = { workspace = true }
tera = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum-server = { workspace = true }
jsonwebtoken = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures = "0.3"
x509-parser = { workspace = true }
yasna = { workspace = true }
sha1 = { workspace = true }
num-bigint = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
rcgen = "0.13"
tempfile = { workspace = true }
