[package]
name = "hsm-tui"
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hsm-core = { path = "../hsm-core" }
ratatui = "0.30.0-alpha.5"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
base64 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.0"
escargot = "0.5"